--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,11 @@ dependencies {
   compile 'org.twitter4j:twitter4j-core:4.0.4'
   compile 'org.apache.commons:commons-csv:1.1'
   compile 'org.twitter4j:twitter4j-stream:4.0.2'
+  compile 'org.facebook4j:facebook4j-core:2.4.3'
+  compile 'com.mashape.unirest:unirest-java:1.4.7'
+  compile 'com.googlecode.stackexchange:stackoverflow-java-sdk:2.2.0'
+  compile 'com.google.code.gson:gson:2.6.2'
+
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
